--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -15,6 +15,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./motorway-milestones/">Километрични маркери</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./road-network/">Пътна мрежа</a>
+                </li>
             </ul>
         </div>
     </div>
